@@ -167,9 +167,9 @@ Edit #CONFIG_PREFIX#/ufw/sysctl.conf to have:
  net.ipv4.ip_forward=1
 .TP
 Add to the *filter section of #CONFIG_PREFIX#/ufw/before.rules:
- \-A ufw\-before\-forward \-m state \-\-state RELATED,ESTABLISHED \\
-   \-j ACCEPT
- \-A ufw\-before\-forward \-m state \-\-state NEW \-i eth0 \\
+ \-A ufw\-before\-forward \-m conntrack \\
+   \-\-ctstate RELATED,ESTABLISHED \-j ACCEPT
+ \-A ufw\-before\-forward \-m conntrack \-\-ctstate NEW \-i eth0 \\
    \-d 10.0.0.2 \-p tcp \-\-dport 80 \-j ACCEPT
 .TP
 Add to the end of #CONFIG_PREFIX#/ufw/before.rules, after the *filter section:
@@ -209,13 +209,13 @@ Edit #CONFIG_PREFIX#/ufw/sysctl.conf to have:
   net.ipv4.ip_forward=1
 .TP
 Add to the *filter section of #CONFIG_PREFIX#/ufw/before.rules:
- \-A ufw\-before\-forward \-m state \-\-state RELATED,ESTABLISHED \\
-   \-j ACCEPT
+ \-A ufw\-before\-forward \-m conntrack \\
+   \-\-ctstate RELATED,ESTABLISHED \-j ACCEPT
 
- \-A ufw\-before\-forward \-i eth1 \-s 10.0.0.0/8 \-o eth0 \-m state \\
-   \-\-state NEW \-j ACCEPT
+ \-A ufw\-before\-forward \-i eth1 \-s 10.0.0.0/8 \-o eth0 \\
+   \-m conntrack \-\-ctstate NEW \-j ACCEPT
 
- \-A ufw\-before\-forward \-m state \-\-state NEW \-i eth0 \\
+ \-A ufw\-before\-forward \-m conntrack \-\-ctstate NEW \-i eth0 \\
    \-d 10.0.0.2 \-p tcp \-\-dport 80 \-j ACCEPT
 
  \-A ufw\-before\-forward \-o eth0 \-d 10.0.0.0/8 \-j REJECT
