@@ -7,6 +7,8 @@ ufw (0.34) UNRELEASED; urgency=low
   * add 'reload' to help (LP: #1059060)
   * check-requirements now gives iptables output on failure. Patch thanks to
     S. Nizio.
+  * use conntrack instead of state module. Patch thanks to S. Nizio
+    (LP: #1065297)
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Thu, 18 Oct 2012 19:19:55 -0500
 
